# CityBuilder

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  build.zig  buildShader.bat  build_dll.bat  build_hr.bat  hot_reload.bat
documentation/: Build.md  Faq.md  NamingConvention.md
include/: Audio.h  Color.h  Constants.h  DrawableObject.h  FileSystem.h  GUI.h  Graphics.h  Grid.h  Image.h  Input.h  Logger.h  Maths.h  Random.h  Serialization.h  Serialization.hpp  Texture.h  Tile.h  Timer.h  Unit.h  UnitManager.h  Vector.h  Window.h
libs/include/: Platform.h  basic-sapp.glsl.h  stb_image.h
shader/: basic-sapp.glsl
src/: Audio.cpp  Color.cpp  Engine.cpp  GUI.cpp  Game.cpp  Graphics.cpp  Grid.cpp  Image.cpp  Input.cpp  Platform.cpp  Random.cpp  Serialization.cpp  Tile.cpp  Timer.cpp  UnitManager.cpp  UnityBuild.cpp  Window.cpp
